# hoverboard-firmware

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
Hoverboard/: .gitignore  detekt.yml  settings.gradle.kts
Hoverboard/app/: build.gradle.kts
Hoverboard/app/src/main/: AndroidManifest.xml
Hoverboard/app/src/main/java/com/hoverboard/app/: ConnectViewModel.kt  HoverboardApp.kt  MainActivity.kt
Hoverboard/app/src/main/java/com/hoverboard/app/ble/: BleHoverboardTransport.kt  HoverboardTransport.kt  LinkConfig.kt
Hoverboard/app/src/main/java/com/hoverboard/app/di/: BleModule.kt
Hoverboard/app/src/main/java/com/hoverboard/app/model/: ConnectionState.kt  GattContract.kt
Hoverboard/app/src/main/java/com/hoverboard/app/net/l2/: BleStreamTransport.kt  Crc16.kt  FragHdr.kt  Link.kt  Reassembler.kt  StreamFramer.kt
Hoverboard/app/src/main/java/com/hoverboard/app/net/l3/: BleWalk.kt  Controller.kt  Pdu.kt
Hoverboard/app/src/main/java/com/hoverboard/app/net/store/: StoreWire.kt
Hoverboard/app/src/main/java/com/hoverboard/app/ui/screens/: ConnectScreen.kt  PermissionScreen.kt
Hoverboard/app/src/main/res/drawable/: ic_launcher_foreground.xml
Hoverboard/app/src/main/res/values/: strings.xml  themes.xml
Hoverboard/app/src/test/java/com/hoverboard/app/net/: BleWalkTest.kt  L2Test.kt  NetTestHarness.kt  PduTest.kt  StoreWireTest.kt  WalkTest.kt
Hoverboard/gradle/: libs.versions.toml
crates/attitude/: Cargo.toml
crates/attitude/src/: lib.rs  tests.rs
crates/base/: Cargo.toml
crates/base/src/: crc16.rs  error.rs  fixed.rs  lib.rs  pi.rs
crates/bench-runner/: Cargo.toml
crates/bench-runner/src/: main.rs
crates/ble/: Cargo.toml
crates/ble-loopback-test/: Cargo.toml  build.rs  memory.x
crates/ble/src/: lib.rs  tests.rs
crates/ble/test-harness/: README.md  build.gradle  run-sweep.sh  settings.gradle
crates/ble/test-harness/app/: build.gradle
crates/ble/test-harness/app/src/main/: AndroidManifest.xml
crates/ble/test-harness/app/src/main/java/com/hoverboard/bletest/: Devices.kt  RunnerActivity.kt
crates/ble/test-harness/app/src/main/java/com/hoverboard/bletest/codec/: ResultJson.kt  RunConfig.kt  RunScorer.kt  TestEnvelope.kt  ThroughputRun.kt
crates/ble/test-harness/app/src/main/java/com/hoverboard/bletest/transport/: BleTransport.kt  L2FragmentedTransport.kt  LoopbackTransport.kt  Transport.kt
crates/ble/test-harness/app/src/test/java/com/hoverboard/bletest/: LoopbackRunTest.kt  TestEnvelopeTest.kt
crates/board/: Cargo.toml
crates/board/src/: lib.rs  plumbing.rs  tests.rs
crates/buzzer/: Cargo.toml
crates/buzzer/src/: chime.rs  lib.rs  sequencer.rs  tone.rs
crates/commutation/: Cargo.toml
crates/commutation/src/: foc.rs  hot.rs  lib.rs  sin_table.rs  sine.rs  sixstep.rs  tests.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  tests.rs
crates/control/: Cargo.toml
crates/control/src/: config.rs  fsm.rs  helpers.rs  lib.rs  mode.rs  pid.rs  shaping.rs  speed.rs  tests.rs  throttle.rs
crates/dummy-test/: Cargo.toml  build.rs  memory.x
crates/dummy-test/src/: lib.rs
crates/emulator-runner/: Cargo.toml
crates/emulator-runner/src/: fmc_model.rs  lib.rs  store_emu.rs  store_fmc.rs
crates/emulator-runner/tests/: dummy_images.rs  store_images.rs  store_scenarios.rs
crates/firmware/: Cargo.toml  build.rs  memory.x
crates/firmware/src/: link_glue.rs  main.rs
crates/hardware-runner/: Cargo.toml
crates/hardware-runner/src/: lib.rs  main.rs  store_driver.rs  store_silicon.rs
crates/harness-abi/: Cargo.toml
crates/harness-abi/src/: lib.rs
crates/harness-emu/: Cargo.toml
crates/harness-emu/src/: lib.rs
crates/harness-emu/tests/: smoke_emu.rs
crates/harness-smoke/: Cargo.toml  build.rs  memory.x
crates/harness-smoke/src/: main.rs
crates/imu/: Cargo.toml
crates/imu-bench/: Cargo.toml  build.rs  memory.x
crates/imu/src/: lib.rs  tests.rs
crates/inputs/: Cargo.toml
crates/inputs/src/: combo.rs  debounce.rs  lib.rs  pad.rs  tests.rs  throttle.rs
crates/l2-ble-bench/: Cargo.toml  memory.x
crates/l2-uart-bench/: Cargo.toml  build.rs  memory.x
crates/link/: Cargo.toml
crates/link/src/: crc16.rs  frag.rs  frame.rs  framer.rs  item.rs  lib.rs  link.rs  opcode.rs  payload.rs  reasm.rs  serial.rs  transport.rs
crates/link/tests/: golden.rs  golden_frames.txt
crates/linkctl/: Cargo.toml
crates/linkctl/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: forward.rs  lib.rs  pdu.rs  walk.rs
crates/net/src/walk/: tests.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  tests.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: dispatch.rs  lib.rs  tests.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: fault.rs  lib.rs  mode.rs  moe.rs
crates/store/: Cargo.toml
crates/store-test/: Cargo.toml  build.rs  memory.x
crates/store-test/src/: lib.rs
crates/store/examples/: craft_region.rs
crates/store/src/: field.rs  flash.rs  fmc_flash.rs  geometry.rs  key.rs  lib.rs  params.rs  record.rs  registry.rs  scenarios.rs  store.rs  tests.rs  value.rs
crates/swd-bridge/: Cargo.toml
crates/swd-bridge/src/: config.rs  lib.rs  main.rs  openocd.rs  tests.rs  walk.rs
crates/swd-mailbox/: Cargo.toml
crates/swd-mailbox/src/: lib.rs  serial.rs  tests.rs
crates/test-shared/: Cargo.toml
crates/test-shared/src/: lib.rs
crates/wdg-bench/: Cargo.toml  memory.x
docs/: README.md  flashing.md  onboard-ble-module.md
spec/: core.md
stress-test/: FINDINGS.md  SPEC.md
stress-test/app/: .gitignore  build.gradle.kts  run-lever.sh  run-roundtrip.sh  settings.gradle.kts
stress-test/app/app/: build.gradle.kts
stress-test/app/app/src/main/: AndroidManifest.xml
stress-test/app/app/src/main/java/com/hoverboard/stress/: RunnerActivity.kt
stress-test/firmware/: Makefile  gd32f10x_libopt.h  link.ld  main.c  startup.c
tools/: bench-lock.sh  flash.sh  imu-tilt.py  store-bench-oracle.sh  test_imu_tilt.py  tilt-session.sh
(+14 files in other folders)
