[workspace]
resolver = "2"
members = ["crates/*"]
# The host-only runners link native libraries (Unicorn's cmake-built lib, probe-rs) or are otherwise
# host-target tools (the SWD mailbox bridge talks to openocd over TCP) that do not belong in the
# thumbv7m default target. They are excluded from the workspace so a bare `cargo build` (thumbv7m) and
# the workspace host unit tests stay green; each is built/tested via its own manifest on a host target
# (see crates/emulator-runner, crates/hardware-runner, crates/swd-bridge).
exclude = ["crates/emulator-runner", "crates/hardware-runner", "crates/swd-bridge"]

[profile.release]          # the embedded profile: small + linkable
opt-level = "z"
lto = true
codegen-units = 1
debug = true               # keep DWARF for SWD/nm; it never reaches flash

[profile.dev]
panic = "abort"
# FULL LTO in dev (slice 7): the integrated image links the whole control stack, and thin LTO's
# weaker cross-crate DCE leaves ~55 KiB of dev-only dead formatting machinery in the link (the
# `fixed` Display/Debug paths + core flt2dec reachable through panic sites that full LTO
# const-folds away), overflowing the F130's 64 KiB FLASH (dev measured 119 KiB thin vs 48.7 KiB
# full). Cost: a deep host-test rebuild goes ~19 s -> ~30 s (measured, store-touch cascade);
# accepted so BOTH build profiles link the shipping image.
lto = true

# Optimize DEPENDENCIES in dev (the firmware bin and the other thumbv7m images link into a 64 KiB
# FLASH; the unoptimized `net`/`link`/`store`/HAL deps overflow it in a debug `cargo build`). Workspace
# crates keep the default opt-level 0 (debuggable); only the path/third-party deps are size-optimized,
# which both fits the embedded images and keeps host-test builds fast. (CI's `cargo build` is dev.)
[profile.dev.package."*"]
opt-level = "z"

# The firmware bin's own (monomorphized) code also has to fit the 64 KiB FLASH in a debug build; it
# ships as a release image, so size-optimizing it in dev too is harmless.
[profile.dev.package.firmware]
opt-level = "z"

# The integrated control stack's workspace crates (slice 7): the `"*"` wildcard above does NOT
# cover workspace members (cargo's rule), so the math-heavy crates the firmware image now links
# (control/attitude at opt 0 overflowed the imu-bench image by ~87 KiB .text, and overflow the
# integrated dev image by ~92 KiB) get explicit dev size-optimization. Host tests of these crates
# just run a little faster-built; debuggability on target was never at opt 0 anyway (the shipped
# image is release).
[profile.dev.package.attitude]
opt-level = "z"
[profile.dev.package.control]
opt-level = "z"
[profile.dev.package.imu]
opt-level = "z"
[profile.dev.package.inputs]
opt-level = "z"
[profile.dev.package.linkctl]
opt-level = "z"
[profile.dev.package.orchestrator]
opt-level = "z"
[profile.dev.package.scheduler]
opt-level = "z"
[profile.dev.package.state]
opt-level = "z"

# Speed-optimize the control-math crates in release while the shell stays size-optimized
# (specs/integration.md, "Size and RAM budget"; the 2026-07-18 control-run cost defect). At
# opt-"z" the integrated image's out-of-line Mahony::update measured 4+ ms per 250 Hz tick (the
# fixed-point cordic/I64 math dominates the 4 ms budget); O3 on just these crates halves it for
# ~+7 KiB of image. imu-bench had masked this: full LTO inlined + const-folded the same math
# against its literal config, so the small image was fast at "z" while the big one was not.
[profile.release.package.attitude]
opt-level = 3
[profile.release.package.imu]
opt-level = 3
[profile.release.package.base]
opt-level = 3
[profile.release.package.fixed]
opt-level = 3
[profile.release.package.cordic]
opt-level = 3

# The LEAF crate's opt-level sets the fat-LTO pass pipeline for the WHOLE merged module, so a
# "z" leaf re-pessimizes everything, including the O3 math crates above (silicon-measured
# 2026-07-18: leaf "z" -> the 250 Hz pipeline cost 8.7 ms; leaf "s" -> 0.91 ms, a ~10x swing for
# +1.3 KiB of image; leaf O3 overflows the 64 KiB part by ~9 KiB). "s" is the fit-and-fast point.
[profile.release.package.firmware]
opt-level = "s"

# Speed-optimize runtime-hal (the polled I2C burst path lives here). Round-12 codegen fix
# (specs/integration.md "IMU burst"; bench-evidence/2026-07-21/round12/): runtime-hal compiled at
# the base release opt-level ("z") inside the fat-LTO merge -- the exact code class the leaf-opt
# swings above hit. That "z" codegen made the SAME clone's byte-identical 400 kHz I2C burst take
# ~1.8-2.0 ms on the integrated image vs 0.40 ms in imu-bench (rounds 8/9/11b), which was the 250 Hz
# BINDING constraint (burst alone 51% CPU at 250 Hz). Setting runtime-hal to opt 3 restored the
# unflooded 250 Hz + 4:1 gate: control:tick 0.88 -> 0.9999 (window A, 15279/15280, tear-robust;
# a second window showed 0.983 = a real ~1.7% episodic slip, open observation), control
# 221.6 -> 251.7 Hz (the tick runs 251.7-251.9 Hz on this IRC8M part), control:input exactly
# 4.00:1 (round12/02 + the round-12 audit's tick-staleness correction). FREE on image size:
# .text 50748 -> 50416 B (LTO inlining wins post-merge), well inside the 64 KiB budget. (Flooded
# is still drain-bound at ~184 Hz, control:tick 0.726, round12/03; that is the poll_recv
# per-call drain, a separate track.) Note: a per-package opt demonstrably still matters
# post-merge (this line = a ~12% control-rate swing), so the leaf-opt rule above sets the pass
# pipeline but does NOT make per-package levels irrelevant.
[profile.release.package.runtime-hal]
opt-level = 3
