# Three-mode motor commutation math (specs/commutation.md): six-step / sinusoidal / FOC as pure,
# host-testable, no-FPU fixed-point functions over a shared hall front-end. HAL-free by contract:
# hardware facts enter as arguments and leave as data (per-phase duty commands); nothing here
# configures a pin, timer, PWM output, or ADC, and the output vocabulary cannot express MOE.
[package]
name = "commutation"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Runtime-selectable motor commutation math (six-step / sine / FOC): shared hall front-end, stock-exact fixed-point FOC blocks, per-phase duty output. no_std, HAL-free, host-testable."

[dependencies]
# (base::pi arrives with the q-axis PI in slice 4; slice 1 has no dependencies.)
