[package]
name = "dummy-test"
version = "0.1.0"
edition = "2021"
description = "The dummy firmware images (dummy-pass / dummy-fail / dummy-hang) that run the shared dummy() on a chip or emulator. Thumbv7m, cortex-m-rt. These are the exact images flashed and emulated."

[dependencies]
test-shared = { path = "../test-shared" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "1"
