[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
description = "The universal firmware binary: one thumbv7m image that detects which GD32 it is on at boot (runtime-hal detect_chip), mounts the flash store at the detected top-of-flash, and runs the bare housekeeping loop. The shipping image: `cargo build --release` -> the universal `firmware` ELF -> `.bin`, valid on every part (memory.x sized to the smallest, the F130)."

[dependencies]
# The libraries firmware assembles; it owns no behavior of its own. `base` is pulled in transitively
# by `store`; firmware names `store` (the flash KV store + FmcFlash) directly.
store = { path = "../store" }
# The SWD mailbox: the firmware carves its fixed RAM region (memory.x) and inits the header at boot,
# and services it from the loop (specs/swd-mailbox.md). HAL-free, no_std.
swd-mailbox = { path = "../swd-mailbox" }
# L3 (the `net` Responder, serviced over the mailbox L2 link) + L2 (the `Link`/`SerialTransport` the
# mailbox rides on). HAL-free, no_std.
net = { path = "../net" }
link = { path = "../link" }
# The CC2541 BLE module AT bring-up (specs/ble.md): the firmware's BT-probe phase drives `ble::probe`
# + `Module::bring_up` over a polled serial to a transparent-data `Pipe` (the BLE L2 carrier).
ble = { path = "../ble" }
# The device-driver seam for the inter-board UART adapter (UsartSerial: embedded-io over runtime-hal's
# Usart + RingBufferedRx), which link's SerialTransport drives.
embedded-io = "0.6"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "1"

# The HAL providing the runtime `detect_chip()` and the FMC flash driver. Target-gated exactly like
# the store's dependency: the host build of this crate degrades to an empty `main`, so it never links
# the HAL. runtime-hal is a sibling checkout (../../../runtime-hal); CI clones it alongside.
[target.'cfg(target_arch = "arm")'.dependencies]
runtime-hal = { path = "../../../runtime-hal" }
